--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     user: "1000:1000"
     volumes:
       - ./config.yaml:/app/config.yaml:ro
-      - ./web/miniflux-archive:/app/web
+      - ./web/miniflux-archive:/app/web/miniflux-archive
       
     restart: unless-stopped
