feat(testing): Add comprehensive tests and refactor for maintainability (#2)
This commit introduces a robust testing suite for the archive package and refactors several core components for better maintainability and adherence to Go best practices.

Key changes include:
- Added unit tests for the archive creation and cleanup logic.
- Refactored template handling to use a centralized `internal/templates` package with `go:embed`, making the binary self-contained.
- Abstracted mock data into a new `internal/testutil` package to be reused across future tests.
- Introduced `golangci-lint` as a version-locked development dependency using the `tools.go` pattern.
- Added `lint` and `test` steps to the Woodpecker CI pipeline to ensure code quality before building.
- Updated the Dockerfile to remove the redundant template copy.

Reviewed-on: https://git.eleith.com/eleith/miniflux-digest/pulls/2
Co-authored-by: eleith
Co-committed-by: eleith

--- a/.woodpecker/build-docker.yml
+++ b/.woodpecker/build-docker.yml
@@ -7,6 +7,14 @@ when:
     branch: main
 
 steps:
+  lint:
+    image: golangci/golangci-lint:v1.59.1-alpine
+    commands:
+      - golangci-lint run -v
+  test:
+    image: golang:1.24.5-alpine
+    commands:
+      - go test ./...
   build-docker:
     image: woodpeckerci/plugin-docker-buildx:6.0.1
     settings:
