--- a/.woodpecker/build-docker.yml
+++ b/.woodpecker/build-docker.yml
@@ -7,14 +7,19 @@ when:
     branch: main
 
 steps:
-  lint:
-    image: golangci/golangci-lint:v1.59.1-alpine
+  vendor:
+    image: golang:1.24.5-alpine
     commands:
+      - go mod vendor
+  lint:
+    image: golang:1.24.5-alpine
+    commands:
+      - go install github.com/golangci/golangci-lint/cmd/golangci-lint
       - golangci-lint run -v
   test:
     image: golang:1.24.5-alpine
     commands:
-      - go test ./...
+      - go test -mod=vendor ./...
   build-docker:
     image: woodpeckerci/plugin-docker-buildx:6.0.1
     settings:
