fix: Pin golangci-lint version in CI (#5)
This commit pins the version of `golangci-lint` in the Woodpecker
CI pipeline to `v2.3.0` to prevent discrepancies between local and
CI lint checks.

Reviewed-on: https://git.eleith.com/eleith/miniflux-digest/pulls/5
Co-authored-by: eleith
Co-committed-by: eleith

--- a/.woodpecker/build-docker.yml
+++ b/.woodpecker/build-docker.yml
@@ -14,7 +14,7 @@ steps:
   lint:
     image: golang:1.24.5-alpine
     commands:
-      - go install github.com/golangci/golangci-lint/cmd/golangci-lint
+      - go install github.com/golangci/golangci-lint/v2/cmd/golangci-lint@v2.3.0
       - golangci-lint run -v
   test:
     image: golang:1.24.5-alpine
