ci: Add path filtering to pipeline (#6)
This commit adds path filtering to the Woodpecker CI pipeline to
prevent the pipeline from running on documentation-only changes. The
pipeline will now only run on changes to `.go` files or the
pipeline file itself, and it will correctly handle tag events.

Reviewed-on: https://git.eleith.com/eleith/miniflux-digest/pulls/6
Co-authored-by: eleith
Co-committed-by: eleith

--- a/.woodpecker/build-docker.yml
+++ b/.woodpecker/build-docker.yml
@@ -5,6 +5,13 @@ workspace:
 when:
   - event: [push, tag]
     branch: main
+    path:
+      include:
+        - "**/*.go"
+        - ".woodpecker/build-docker.yml"
+      exclude:
+        - "**/*.md"
+      on_empty: true
 
 steps:
   vendor:
