--- a/.woodpecker/build-docker.yml
+++ b/.woodpecker/build-docker.yml
@@ -8,6 +8,7 @@ when:
     path:
       include:
         - "**/*.go"
+        - "**/*.gohtml"
         - ".woodpecker/build-docker.yml"
       exclude:
         - "**/*.md"
