build: optimize docker build and clean up gitignore (#16)
- Adds common development files and directories, including the `vendor` directory, to `.dockerignore` to reduce the build context size.
- Replaces the broad `COPY . .` command in the `Dockerfile` with more specific `COPY` commands for better layer caching.
- Cleans up and organizes the `.gitignore` file with comments and best practices.

Reviewed-on: https://git.eleith.com/eleith/miniflux-digest/pulls/16
Co-authored-by: eleith
Co-committed-by: eleith

--- a/.dockerignore
+++ b/.dockerignore
@@ -7,3 +7,26 @@ docker-compose.yml
 Dockerfile
 .woodpecker
 web/miniflux-archive
+
+# Git
+.git
+.gitignore
+.gemini
+
+# Documentation
+*.md
+
+# Local development
+.env
+config.local.yaml
+coverage.out
+coverage.html
+
+# Scripts not needed in the final image
+scripts/
+
+# OS-specific files
+.DS_Store
+
+# Vendored dependencies
+vendor/
