--- a/.woodpecker/build-docker.yml
+++ b/.woodpecker/build-docker.yml
@@ -10,6 +10,7 @@ when:
         - "**/*.go"
         - "**/*.gohtml"
         - ".woodpecker/build-docker.yml"
+        - "Dockerfile"
       exclude:
         - "**/*.md"
       on_empty: true
