feat: add configurable html minification (#23)
This change introduces HTML minification to reduce the size of email attachments, which
  is particularly beneficial for digests with a large number of entries.

  The minification is enabled by default and can be configured via a new digest.compress
  option in config.yaml.

  Additionally, the preview-html script now supports a -minify flag (e.g., make
  preview-html minify=false) to allow for easy testing of both minified and non-minified
  output.

  This implementation uses the tdewolff/minify library to handle HTML, CSS, and
  JavaScript minification safely and efficiently.

Reviewed-on: https://git.eleith.com/eleith/miniflux-digest/pulls/23
Co-authored-by: eleith
Co-committed-by: eleith

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -14,3 +14,4 @@ digest:
     from: "SENDER_EMAIL@example.com"
   schedule: "@every 24h" # Cron schedule for digest generation
   host: "https://your-digest-host.com" # URL where HTML archives will be served
+  compress: true # Compress HTML before sending
