--- a/config.yaml.example
+++ b/config.yaml.example
@@ -15,3 +15,4 @@ digest:
   schedule: "@every 24h" # Cron schedule for digest generation
   host: "https://your-digest-host.com" # URL where HTML archives will be served
   compress: true # Compress HTML before sending
+  group_by: "day" # Group entries by "day" or "feed"
