feat: config, and LLM integration updates (#27)
Refactored configuration to use nested structs. Implemented
     validation for configuration fields, including custom validation for
     digest.schedule using robfig/cron/v3. digest.schedule is now optional and defaults  to @weekly

Added AI configuration option

Reviewed-on: https://git.eleith.com/eleith/miniflux-digest/pulls/27
Co-authored-by: eleith
Co-committed-by: eleith

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -15,4 +15,7 @@ digest:
   schedule: "@every 24h" # Cron schedule for digest generation
   host: "https://your-digest-host.com" # URL where HTML archives will be served
   compress: true # Compress HTML before sending
-  group_by: "day" # Group entries by "day" or "feed"
+  group_by: "day" # Group entries by "day" or "ai"
+
+ai:
+  api_key: "YOUR_GEMINI_API_KEY"
