--- a/config.yaml.example
+++ b/config.yaml.example
@@ -15,6 +15,8 @@ digest:
   schedule: "@every 24h" # Cron schedule for digest generation
   host: "https://your-digest-host.com" # URL where HTML archives will be served
   compress: true # Compress HTML before sending
+  mark_as_read: true # Mark entries as read after sending
+  run_on_startup: false # Run digest on startup
   group_by: "day" # Group entries by "day" or "ai"
 
 ai:
