--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,6 @@ services:
     volumes:
       - ./config.yaml:/app/config.yaml:ro
       - ./web/miniflux-archive:/app/web/miniflux-archive
-      
+    ports:
+      - "3000:8080"
     restart: unless-stopped
