--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -1,8 +1,7 @@
-name: Cleanup Container Registry
+name: apply container retention
 
 on:
   schedule:
-    # Runs once a day at 2:30 AM UTC
     - cron: '30 2 * * *'
   workflow_dispatch:
 
